<resources>
    <string name="app_name">Light Novels</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_Settings">Setting</string>
    <string name="title_Detail">Detail</string>
    <string name="title_Reader">Reader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="epub_navigator_tag">epub_navigator</string>
    <string name="title_sync">Import Library</string>


    <!--    Dashboard-->
    <string name="dash_series_count">Currently with %1$d series, %2$d tracked</string>
    <string name="dash_book_count">Currently with %d books</string>
    <string name="dash_sync_series">Sync Series</string>
</resources>