<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.knightshrestha.lightnovels.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_fileNotExistFragment"
            app:destination="@id/fileNotExistFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.knightshrestha.lightnovels.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.knightshrestha.lightnovels.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.knightshrestha.lightnovels.ui.settings.SettingsFragment"
        android:label="@string/title_Settings" />



    <fragment
        android:id="@+id/detailFragment"
        android:name="com.knightshrestha.lightnovels.ui.detail.DetailFragment"
        android:label="@string/title_Detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="series_path"
            app:argType="string" />
        <action
            android:id="@+id/action_detailFragment_to_readerFragment"
            app:destination="@id/readerFragment" />

    </fragment>
    <fragment
        android:id="@+id/readerFragment"
        android:name="com.knightshrestha.lightnovels.ui.reader.ReaderFragment"
        android:label="Reader"
        tools:layout="@layout/fragment_reader" >
        <argument
            android:name="book_path"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_import"
        android:name="com.knightshrestha.lightnovels.ui.importandsync.ImportAndSyncFragment"
        android:label="Import Series"
        tools:layout="@layout/fragment_import_and_sync" />
    <fragment
        android:id="@+id/fileNotExistFragment"
        android:name="com.knightshrestha.lightnovels.ui.FileNotExistFragment"
        android:label="File Error"
        tools:layout="@layout/fragment_file_not_exist" />


</navigation>